# CLIP-API-service

./: .dockerignore  .gitignore  Dockerfile  README.md  bentofile.gpu.yaml  docker-compose-build.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  serve
.github/workflows/: build-publish-docker-image.yml
clip_api_service/: __init__.py  build.py  client.py  models.py  runners.py  samples.py  service.py  utils.py
clip_api_service/bentofiles/: bentofile.openclip.cpu.yaml  bentofile.openclip.gpu.yaml
clip_api_service/models/: __init__.py  cclip.py  mclip.py  openai.py  openclip.py
example/: clip_demo.ipynb
src/: main.py
src/clip_api_service/: __init__.py  _service.py  build.py  cli.py  runners.py  service.py  utils.py
src/clip_api_service/bentofiles/: bentofile.openai.cpu.yaml  bentofile.openai.gpu.yaml  bentofile.openclip.cpu.yaml  bentofile.openclip.gpu.yaml  bentofile.transformers.gpu.yaml
src/clip_api_service/models/: __init__.py  cclip.py  mclip.py  openai.py  openclip.py
src/clip_client/: client.py
